# sap

./: .dockerignore  .env  .env.example  .gitignore  API_ROUTES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.prod  LICENSE  MIGRATION_GUIDE.md  README-dev.md  README.md  SECURITY.md  check-existing-users.ts  diesel.toml  docker-entrypoint.prod.sh  docker-entrypoint.sh  drizzle.config.ts  ecosystem.config.js  eslint.config.js  fix-users-without-roles.ts  fly.toml  package-lock.json  package.json  render.yaml  shuttle_prebuild.sh  shuttle_setup_container.sh  test-live-registration.ts  test-registration-endpoint.ts  test-user-creation.ts  tsconfig.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  deploy_dev.yml  test.yml
distdrizzle/: 0000_majestic_darwin.sql  0001_mature_nehzno.sql  0003_little_smasher.sql  0004_chief_the_anarchist.sql  0006_abnormal_jubilee.sql  0009_dizzy_starhawk.sql  0010_nosy_silver_centurion.sql  0011_nappy_sprite.sql
drizzle/: 0000_initial_schema.sql  0000_tired_magik.sql  0001_flowery_lucky_pierre.sql  0002_good_meteorite.sql  0002_short_shotgun.sql  0003_cultured_toad.sql  0004_update_foreign_keys.sql  0007_married_thor_girl.sql  0008_volatile_wind_dancer.sql  0012_freezing_mole_man.sql  0013_orange_human_fly.sql  0014_clammy_maddog.sql  0015_quiet_monster_badoon.sql  0015_report_module.sql  0016_keen_ben_parker.sql
scripts/: backup.ts
src/: db_connection.rs  index.ts  main.rs  schema.rs  secret.rs
(+87 files in other folders)
