[package]
name = "brainforest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
env_logger = "0.11.5"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
utoipa = { version = "5.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }