[package]
name = "brainforest"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
actix-web = { version = "4", features = ["rustls", "cookies"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
env_logger = "0.11.5"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
utoipa = { version = "5.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.41.1"
once_cell = "1.20.2"
rustls = "0.23.19"
rustls-pemfile = "2.2.0"
actix-cors = "0.7.0"
chrono = "0.4.39"
cargo-watch = "8.5.3"